--- a/src/containers/Blogs/BlogsByUser/BlogsByUser.module.scss
+++ b/src/containers/Blogs/BlogsByUser/BlogsByUser.module.scss
@@ -1,161 +1,63 @@
-.Bg {
-    
-    // background-image: url(../../../assets/pet11.jpg);
-    background-position: top center;
+.container{
+    // min-height: 87.5vh;
     min-height: 100vh;
-    background: rgba(0,0,0,0.8);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+    padding-top: 30px;
+    margin: auto;
+    // padding-top: 30px;
+    columns: 4;
+    column-gap: 40px;
 }
 
-
-.Wrapper{
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    // background: rgba(0,0,0,0.8);
-    transform: translateY(-50%);
-    padding: 0 20px;
-}
-
-.ContactForm {
-    max-width: 1000px;
-    margin: 0 auto;
-    // background: rgba(0,0,0,0.8);
-    background:#F8F8FF;
-    padding: 30px;
-    border-radius: 5px;
-    display: flex;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-}
-
-.InputFields {
-    display: flex;
-    
-    // background: rgba(0,0,0,0.7);
-    flex-direction: column;
-    margin-right: 4%;
+.Button {
+    border: none;
+    padding: 5px;
+    display: block;
+    font-size: 25px;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
     outline: none;
-    flex: 1;
-
-}
-.Msg {
-    flex: 1.5;
-}
-
-.InputFields , .Msg {
-    width: 80%;
-}
-
-.InputFields input[type="text"] {
-    margin: 20px 0;
-    background: transparent;
-    font-size: 20px;
-    border: 0;
-    border-bottom: 2px solid rgba(223,204,153, 1)  ;
-    padding: 10px;
-    color: rgba(223,204,153, 1) ;
-    width: 100%;
-
-}
-
-.Change::-webkit-input-placeholder {
-    /* WebKit, Blink, Edge */
-    color: rgba(223,204,153, 1) ;
-}
-
-.InputFields .InputButton {
-    margin: 20px 0;
-    background: transparent;
-    text-transform: uppercase;
-    font-size: 20px;
-    // border: 0;
-    border: 2px solid rgba(223,204,153, 1);
-    padding: 10px;
-    // color: #c5ecfd;
-    color: rgba(223,204,153, 1) ;
-    width: 100%;
     cursor: pointer;
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 10px 2px rgba(0,0,0,.2);
-    }
-    &:active {
-        transform: translateY(-1px);
-        box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    background-color: #dfcc99 ;
+    color: #5a5757;
+    // background-image: linear-gradient(to right ,#6782B4 ,#B1BFD8);
+    z-index: 1;
+}
+
+.Heading {
+    padding-top: 100px;
+    text-align: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // padding-top: 20px;
+    // margin-bottom: 20px;
+    color: rgba(	223,204,153, 1);
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+
+@media (max-width: 1200px) {
+    .container{
+        columns: 3;
+        width: calc(100%-40px);
+        padding: 100px 20px 20px 0;
     }
 }
 
-// .ArrowButton {
-//     margin: 20px 0;
-//     background: transparent;
-//     text-transform: uppercase;
-
-//     // border: 0;
-//     // border: 2px solid #c5ecfd ;
-//     padding: 10px;
-//     color: #c5ecfd;
-//     // width: 100%;
-//     cursor: pointer;
-//     &:hover {
-//         transform: translateY(-3px);
-//         box-shadow: 0 10px 2px rgba(0,0,0,.2);
-//     }
-//     &:active {
-//         transform: translateY(-1px);
-//         box-shadow: 0 5px 10px rgba(0,0,0,.2);
-//     }
-
-//     // i {
-//     //     font-size: 20px;
-//     // }
-// }
-
-
-
-
-
-//     .InputFields .Input {
-//         color: rgba(	223,204,153, 0.7) ;
-//         text-transform: uppercase;
-    
-//     }
-
-// }
-
-// ::-moz-placeholder {
-//     color: #c5ecfd;
-//     text-transform: uppercase;
-
-// }
-
-@media screen and (max-width: 600px) {
-    .ContactForm {
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        
+@media (max-width: 760px) {
+    .container{
+        columns: 2;
     }
-    
-    .InputFields {
-        flex: 1;
-        width: 100%;
-        margin: 5px 0;
-    
-    }
-    .Msg {
-        flex: 1;
-        width: 100%;
-        margin: 5px 0;
-    }   
+}
 
-    .InputFields input[type="text"] {
-        font-size: 14px;
-    
-    }
-
-    .InputFields .InputButton {
-        font-size: 14px;
+@media (max-width: 480px) {
+    .container{
+        columns: 1;
     }
 }
