--- a/src/containers/Blogs/Pets/Pets.module.scss
+++ b/src/containers/Blogs/Pets/Pets.module.scss
@@ -1,8 +1,9 @@
 .container{
     // min-height: 87.5vh;
     min-height: 100vh;
+    padding-top: 110px;
     margin: auto;
-    padding-top: 30px;
+    // padding-top: 30px;
     columns: 4;
     column-gap: 40px;
 }
