--- a/src/containers/Blogs/BlogsByUser/BlogsByUser.module.scss
+++ b/src/containers/Blogs/BlogsByUser/BlogsByUser.module.scss
@@ -46,8 +46,9 @@
     .container{
         columns: 3;
         width: calc(100%-40px);
-        padding: 100px 20px 20px 0;
+        padding: 30px 20px 20px 0;
     }
+    
 }
 
 @media (max-width: 760px) {
@@ -59,5 +60,8 @@
 @media (max-width: 480px) {
     .container{
         columns: 1;
+    }
+    .Heading {
+        padding-top: 140px
     }
 }
