--- a/src/containers/Blogs/EditPetDetails/EditPetDetails.module.scss
+++ b/src/containers/Blogs/EditPetDetails/EditPetDetails.module.scss
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    padding-top: 100px
 }
 
 
@@ -115,11 +116,5 @@
 
     .InputFields .InputButton {
         font-size: 14px;
-    }
-
-    .Wrapper{
-        
-        top: 40%;
-        
     }
 }
