--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -726,6 +726,12 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     color: #fff;
 }
 
+h2{
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
 .Footer .Social {
     position: relative;
     display: flex;
