--- a/src/components/RichTextEditor/RichTextEditor.module.scss
+++ b/src/components/RichTextEditor/RichTextEditor.module.scss
@@ -121,7 +121,7 @@
     background-color: transparent;
     border: 0;
     border-bottom: 2px solid rgba(223,204,153, 1)  ;
-    padding: 10px;
+    // padding: 10px;
     width: 100%;
     // overflow-y: auto;
     // max-width: 500px;
