--- a/src/components/Toolbar/Toolbar.module.scss
+++ b/src/components/Toolbar/Toolbar.module.scss
@@ -2,7 +2,8 @@
 header {
     // background-color: transparent;
     height: 70px;
-    background: rgba(0,0,0,0.8);
+    background: #f5f5f5;
+    // background: rgba(0,0,0,0.8);
     // color: #5a5757;
     display: flex;
     color: rgb(223,204,153) ;
@@ -26,12 +27,12 @@ header.sticky {
 }
 
 .Logo {
-    height: 40px;
+    height: 70px;
     margin-left: 30px;
 
     @media only screen and (max-width: 500px) {
         margin-left: 10px;
-        
+        height: 40px;
     }
 }
 
@@ -252,7 +253,7 @@ header.sticky .Hamburger{
     position: relative;
     width: 100%;
     height: 2px;
-    background-color: rgba(223,204,153, 1) ;
+    background-color: #2D3F47;
     display: flex;
     align-items: center;
     justify-content: center;
