--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -234,6 +234,8 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     .Services h1 {
         font-size: 25px;
     }
+
+
    
 
 }
@@ -509,7 +511,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 @media(max-width: 500px) {
 
     .Clients {
-        min-height: 90vh;
+        height: 80vh;
     }
 
     .Clients h1 {
@@ -528,6 +530,11 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     .Testimonial .Desc{
         font-size: 12px;
         
+    }
+
+    .Testimonial .Title {
+        font-size: 10px;
+        // margin-bottom: 10px;
     }
 
 }
