--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -234,10 +234,13 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     .Services h1 {
         font-size: 25px;
     }
+}
 
-
-   
-
+@media(max-width: 500px) {
+    
+    .Services h1 {
+        font-size: 20px;
+    }
 }
 
 
@@ -340,8 +343,10 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 }
 
 .PetBox .ContentBox h2 {
-    
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
     font-weight: 500;
+    font-size: 24px;
     line-height: 1.2em;
 }
 .PetBox .ContentBox h2 p span {
@@ -383,7 +388,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     
 
     .Card h1 {
-        font-size: 15px;
+        font-size: 20px;
         // margin-left: 12%;
     }
 
@@ -429,7 +434,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     
     position: relative;
     margin-top: 80px;
-
+    max-height: 400px;
     
 
 }
@@ -454,7 +459,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
 }
 .Testimonial span{
     display: inline-block;
-    font-size: 80px;
+    font-size: 60px;
     color: #bd986b;
     margin-bottom: 20px;
     opacity: 0.6;
@@ -465,6 +470,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     color: #777;
     text-align: justify;
     // margin-left: 50px;
+    font-style: italic;
     display: flex;
     justify-content: center;
     word-wrap: break-word;
@@ -878,7 +884,7 @@ background-image: linear-gradient(315deg, #e2ac6b 0%, #cba36d 74%);
     color: #fff;
 }
 
-h2{
+.Footer h2{
     letter-spacing: 1px;
     text-transform: uppercase;
     margin-bottom: 10px;
