--- a/src/components/PetCard/PetCard.module.scss
+++ b/src/components/PetCard/PetCard.module.scss
@@ -2,9 +2,9 @@
     width: 92%;
     margin: 0 15px 30px ;
     padding: 10px;
-    // background: #fff;
+    background: #fff;
     // background-color: #dfcc99 ;
-    background-color: rgba(	223,204,153, 0.7);
+    // background-color: rgba(	223,204,153, 0.7);
     overflow: hidden;
     border-radius: 15px;
     transition: all 1s ease;
