--- a/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
+++ b/src/containers/Blogs/FullPetDetails/FullPetDetails.module.scss
@@ -1,98 +1,98 @@
-.FullPetDetailsContainer {
-    padding-top: 90px;
-}
+// .FullPetDetailsContainer {
+//     padding-top: 90px;
+// }
 
 
-.Section{  
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    // min-height: 100vh;
-    min-width: 100%;
-    // min-height: 100%;
-    background-position: 0 30%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    object-fit: cover;
-    clip-path: circle(0px at center);
-}
+// .Section{  
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     height: 100vh;
+//     // min-height: 100vh;
+//     min-width: 100%;
+//     // min-height: 100%;
+//     background-position: 0 30%;
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-attachment: fixed;
+//     object-fit: cover;
+//     clip-path: circle(0px at center);
+// }
  
-.TextContainer {
-    font-size: 25px;
-    position: relative;
-    margin-top: 200vh;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 50px;
-    background: white;
-    max-width: 80%;
-    word-wrap: break-word;
-    // background: rgba(0,0,0,0.6);
-    padding: 100px 60px;
-}
+// .TextContainer {
+//     font-size: 25px;
+//     position: relative;
+//     margin-top: 200vh;
+//     margin-left: 100px;
+//     margin-right: 100px;
+//     margin-bottom: 50px;
+//     background: white;
+//     max-width: 80%;
+//     word-wrap: break-word;
+//     // background: rgba(0,0,0,0.6);
+//     padding: 100px 60px;
+// }
 
-@media screen and (max-width: 800px) {
-    .TextContainer {
-        padding: 60px;
-        margin-left: 60px;
-        margin-right: 60px;
-        margin-bottom: 40px;
-    }
-    .Button {
-        &__Edit{
-            padding: 10px 20px;
-        }
+// @media screen and (max-width: 800px) {
+//     .TextContainer {
+//         padding: 60px;
+//         margin-left: 60px;
+//         margin-right: 60px;
+//         margin-bottom: 40px;
+//     }
+//     .Button {
+//         &__Edit{
+//             padding: 10px 20px;
+//         }
     
-        &__Delete {
-            padding: 10px 20px;
-        }
+//         &__Delete {
+//             padding: 10px 20px;
+//         }
 
-    }
-}
+//     }
+// }
 
-@media screen and (max-width: 500px) {
-    .TextContainer {
-        padding: 30px;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-bottom: 10px;
+// @media screen and (max-width: 500px) {
+//     .TextContainer {
+//         padding: 30px;
+//         margin-left: 30px;
+//         margin-right: 30px;
+//         margin-bottom: 10px;
         
-    }
+//     }
 
-    .Button {
-        &__Edit{
-            padding: 8px 16px;
-        }
+//     .Button {
+//         &__Edit{
+//             padding: 8px 16px;
+//         }
     
-        &__Delete {
-            padding: 8px 16px;
-        }
+//         &__Delete {
+//             padding: 8px 16px;
+//         }
 
-    }
-}
+//     }
+// }
 
-.Title{
-    position: relative;
-    top: 100px;
-    z-index: 1;
-    text-align: center;
-    width: 100%;
-    background-color: #5a5757  ;
-    display: inline-block;
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    transition: all .2s;
+// .Title{
+//     position: relative;
+//     top: 100px;
+//     z-index: 1;
+//     text-align: center;
+//     width: 100%;
+//     background-color: #5a5757  ;
+//     display: inline-block;
+//     -webkit-background-clip: text;
+//     background-clip: text;
+//     color: transparent;
+//     transition: all .2s;
 
-    h2{
-    font-size: 35px;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 2px;
-    }
-}
+//     h2{
+//     font-size: 35px;
+//     text-transform: uppercase;
+//     font-weight: 700;
+//     letter-spacing: 2px;
+//     }
+// }
 
 .Rating {
     margin-top: 50px;
@@ -191,3 +191,214 @@
     }
 }
 
+.PageWrapper {
+    
+    padding-top: 100px;
+    background-color: #f5f5f5;
+    min-height: 100vh;
+    // width: 90%;
+    // margin: 30px auto 30px;
+}
+
+.Content {
+    // width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // margin: 30px auto 30px;
+}
+
+.MainContent{
+    // display: flex;
+    // flex: ;
+    width: 90%;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    padding: 20px 50px;
+    // width: 70%;
+    // float: left;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.PostTitle{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    line-height: 40px;
+    letter-spacing: 1px;
+    text-transform: capitalize ;
+}
+
+.PostImage {
+    position: relative;
+    // width: 500px;
+    width: 100%;
+    height: 700px;
+    margin-bottom: 40px;
+}
+
+.PostImage img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.Author{
+    display: flex;
+    height: 100px;
+    justify-content: center;
+}
+.ImgAuthor{
+    position: relative;
+    // width: 500px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    
+}
+
+.ImgAuthor img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.DescAuthor .p1 {
+    letter-spacing: 0.5px;
+    font-weight: 400;
+}
+.DescAuthor .p2 {
+    color: #757575;
+}
+
+// .SideBar{
+//     height: 500px;
+//     padding: 0 10px;
+//     width: 90%;
+//     background: white;
+//     margin-left: 20px;
+//     // margin-right: 20px;
+
+//     @media only screen and (max-width: 950px) {
+        
+//         height: 600px;
+        
+//     }
+// }
+
+
+
+.SectionTitle {
+    padding-top: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    line-height: 40px;
+    letter-spacing: 1px;
+    text-transform: capitalize ;
+}
+
+.SectionLine {
+    height: 1px;
+    width: 80%;
+    margin: 0 auto;
+    background-color: #E6E6E6;
+}
+// .SideBar {
+//     min-height: 100vh;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     background: #f5f5f5;
+//     padding: 80px;
+//     padding-top: 0px;
+
+    
+
+// }
+
+.SectionPopular {
+    min-height: 80vh;
+    background: #f5f5f5;
+    // padding-left: 82px;
+    // padding-right: 82px;
+    // padding-top: 0px ;
+    // width: 1100px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    // width: 90%;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 0 50px;
+
+    // @media screen and (max-width: 820px) {
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: space-between;
+    //     align-items: center;
+    // }
+
+    // @media screen and (max-width: 500px) {
+    //     display: flex;
+    //     // padding-top: 200px;
+    //     width: 500px;
+    //     flex-direction: column;
+    //     justify-content: space-between;
+    //     align-items: center;
+    // }
+    
+}
+
+
+// .SectionPopular {
+//     display: flex;
+//     // flex-direction: column;
+// }
+// .SectionPopular .SectionTitle {
+//     margin-bottom: 10px;
+//     line-height: 40px;
+//     letter-spacing: 1px;
+//     text-transform: uppercase;
+//     font-size: 20px;
+//     font-weight: 500;
+// }
+
+
+// @media only screen and (max-width: 900px) {
+//     .Content {
+//         // width: 90%;
+//         display: flex;
+//         flex-direction: column;
+//     }
+
+//     .MainContent{
+//         // display: flex;
+//         // flex: ;
+//         width: 90%;
+       
+//     }
+
+//     .SideBar {
+//         width: 90%;
+//         height: 500px;
+//         margin-bottom: 20px;
+//     }
+    
+    
+// }
