--- a/src/components/PopularBlogs/PopularBlogs.module.scss
+++ b/src/components/PopularBlogs/PopularBlogs.module.scss
@@ -119,6 +119,7 @@
     width: 350px;
     height: 150px;
     margin: 0 auto;
+    margin-top: -30px;
 
     // @media screen and (max-width: 820px) {
     //     width: 100%;
